# lisird

./: .gitignore  .sunpy-template.yml  LICENSE.rst  MANIFEST.in  README.rst  azure-pipelines.yml  pyproject.toml  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
docs/: conf.py  index.rst
lisird/: __init__.py
lisird/data/: datasets.csv
lisird/latis/: __init__.py  latis.py
