[metadata]
name = lisird
author = 
author_email = 
license = BSD 3-Clause
license_file = LICENSE.rst
url = https://lasp.colorado.edu/lisird/
description = A Python package to interface with the LASP Interactive Solar Irradiance Data Center
long_description = file: README.rst

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
setup_requires = setuptools_scm
install_requires = sunpy



[options.extras_require]
test =
    pytest
    pytest-astropy
    pytest-cov
docs =
    sphinx
    sphinx-automodapi
    towncrier

    sunpy-sphinx-theme


[options.package_data]
lisird = data/*

[tool:pytest]
testpaths = "lisird" "docs"
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst
remote_data_strict = True

[coverage:run]
omit =
  lisird/_sunpy_init*
  lisird/conftest.py
  lisird/*setup_package*
  lisird/tests/*
  lisird/*/tests/*
  lisird/extern/*
  lisird/version*
  */lisird/_sunpy_init*
  */lisird/conftest.py
  */lisird/*setup_package*
  */lisird/tests/*
  */lisird/*/tests/*
  */lisird/extern/*
  */lisird/version*

[coverage:report]
exclude_lines =
  # Have to re-enable the standard pragma
  pragma: no cover
  # Don't complain about packages we have installed
  except ImportError
  # Don't complain if tests don't hit assertions
  raise AssertionError
  raise NotImplementedError
  # Don't complain about script hooks
  def main\(.*\):
  # Ignore branches that don't pertain to this version of Python
  pragma: py{ignore_python_version}
  # Don't complain about IPython completion helper
  def _ipython_key_completions_
